check point alternative wet/dry implemenation

--- a/components/mpas-ocean/src/shared/Makefile
+++ b/components/mpas-ocean/src/shared/Makefile
@@ -69,14 +69,14 @@ OBJS = mpas_ocn_init_routines.o \
 	   mpas_ocn_time_average_coupled.o \
 	   mpas_ocn_framework_forcing.o \
 	   mpas_ocn_time_varying_forcing.o \
+	   mpas_ocn_subgrid.o \
 	   mpas_ocn_wetting_drying.o \
 	   mpas_ocn_vel_tidal_potential.o \
 	   mpas_ocn_vel_forcing_topographic_wave_drag.o \
 	   mpas_ocn_transport_tests.o \
 	   mpas_ocn_vel_self_attraction_loading.o \
 	   mpas_ocn_vertical_advection.o \
-           mpas_ocn_stokes_drift.o \
-	   mpas_ocn_subgrid.o
+           mpas_ocn_stokes_drift.o 
 
 all: $(OBJS)
 
