Use ocn_init_subgrid_calculations for parabolic bowl init

--- a/components/mpas-ocean/src/mode_init/Makefile
+++ b/components/mpas-ocean/src/mode_init/Makefile
@@ -7,7 +7,8 @@ UTILS = mpas_ocn_init_spherical_utils.o \
         mpas_ocn_init_cell_markers.o \
         mpas_ocn_init_interpolation.o \
         mpas_ocn_init_ssh_and_landIcePressure.o \
-        mpas_ocn_init_smoothing.o
+        mpas_ocn_init_smoothing.o \
+        mpas_ocn_init_subgrid.o 
 
 TEST_CASES = mpas_ocn_init_baroclinic_channel.o \
              mpas_ocn_init_lock_exchange.o \
@@ -55,6 +56,8 @@ mpas_ocn_init_vertical_grids.o:
 
 mpas_ocn_init_seaSurfaceHeightAndPressure.o:
 
+mpas_ocn_init_subgrid.o:
+
 mpas_ocn_init_baroclinic_channel.o: $(UTILS)
 
 mpas_ocn_init_iso.o: $(UTILS)
@@ -100,6 +103,8 @@ mpas_ocn_init_transport_tests.o: $(UTILS)
 mpas_ocn_init_test_sht.o: $(UTILS)
 
 mpas_ocn_init_parabolic_bowl.o: $(UTILS)
+
+mpas_ocn_init_buttermilk_bay.o: $(UTILS)
 
 
 #mpas_ocn_init_TEMPLATE.o: $(UTILS)
